# Quark

./: CMakeLists.txt  README.md  meson.build
libs/libglfw3/win64/: glfw3.lib
src/: Array.cpp  Array.h  Arrays.h  AutocompleteDialog.cpp  AutocompleteDialog.h  Defines.h  FileTree.cpp  FileTree.h  FindDialog.cpp  FindDialog.h  Globals.h  GlobalsStruct.h  JobManager.cpp  JobManager.h  LayoutManager.cpp  LayoutManager.h  Logger.cpp  Logger.h  MainMenu.cpp  MainMenu.h  NuklearAndConfig.h  NuklearMyPopup.h  NuklearTextEditor.h  OpenFileManager.cpp  OpenFileManager.h  ParsingUtils.cpp  ParsingUtils.h  PluginManager.cpp  PluginManager.h  PluginProtocol.h  PluginUtilities.cpp  PluginUtilities.h  QuarkCore.cpp  QuarkCore.h  TextEditor.cpp  TextEditor.h  Theme.cpp  Theme.h  file_browser.c  hashmap.cpp  (+4 more)
src/cpp_plugin/: CPP_Plugin.cpp  CPP_Plugin.h  build.cpp  build.h  debug.cpp  debug.h  keywords.h
src/nuklear/: nuklear.cpp  nuklear.h  nuklear_glfw.cpp  nuklear_glfw.h  nuklear_glfw_gl3.h
src/python_plugin/: PythonPlugin.cpp  keywords.h
src/tests/: array.cpp  main.cpp  texteditor.cpp
